--- a/Estilos pagina.css
+++ b/Estilos pagina.css
@@ -1,15 +1,41 @@
 /* IDENTIFICAR CLASE  */
-* {
-  color: rgb(0, 247, 255);
+.secciones{
+  color: rgb(0, 159, 183);
   font-size: xx-large;
-  font-weight: 300;
+  flex-direction: unset;
+}
+.Titulo{
+color: rgb(251, 216, 127);
+text-align: center;
+}
+
+.Fotos{
+  display: block;
+  height: auto;
+  width: auto;
+  margin: 25vh auto;
+  }
+
+
+
+{
+  
+  font-size:medium;
+  font-weight: 1500;
+  font-family: "Inter", sans-serif;
+  font-style:inherit;
+  
+}
+
+.Realizado {
+  color:rgb(236, 115, 87) ;
   font-family: "Inter", sans-serif;
 }
 
 /* Toda la pagina con el mismo estilo */
 
 body {
-  background-color: rgb(121, 73, 110);
+  background-color: rgb(87, 70, 123);
   margin: 40px 80px;
   border: 5px solid rgb(255, 255, 255);
   border-radius: 10px;
@@ -21,10 +47,8 @@ body {
   flex-direction: column;
   align-items:flex-start;
 }
-* {
-  font:
-  font-family:
-}
 
 /* IDENTIFICAR ID {#} */
 /* DENTRO DE LA PRIMERA ETIQUETA PONER ID=NOMBRE DE ID */
+
+
