--- a/Estilos pagina.css
+++ b/Estilos pagina.css
@@ -1,22 +1,36 @@
+body {
+  background-color: rgb(247, 235, 232);
+  margin: 40px 80px;
+  border: rgb(rgb(255, 0, 0), green, blue);
+  border-radius: 10px;
+  padding: 1px;
+  box-shadow:darkblue 100px
+
+  /* Para Organizar Listas */
+  justify-content:flex-start;
+  flex-direction: column;
+  align-items:flex-start;
+}
+
+img{
+  display:block;
+  margin:auto;
+  }
+
 /* IDENTIFICAR CLASE  */
 .secciones{
-  color: rgb(0, 159, 183);
+  color: rgb(229, 75, 75);
   font-size: xx-large;
   flex-direction: unset;
 }
 .Titulo{
-color: rgb(251, 216, 127);
+color: rgb(229, 75, 75);
 text-align: center;
+font-size: 80px;
 }
 
 .Fotos{
-  display: block;
-  height: auto;
-  width: auto;
-  margin: 25vh auto;
-  }
-
-
+align-items: center;
 
 {
   
@@ -28,25 +42,13 @@ text-align: center;
 }
 
 .Realizado {
+
   color:rgb(236, 115, 87) ;
   font-family: "Inter", sans-serif;
 }
 
 /* Toda la pagina con el mismo estilo */
 
-body {
-  background-color: rgb(87, 70, 123);
-  margin: 40px 80px;
-  border: 5px solid rgb(255, 255, 255);
-  border-radius: 10px;
-  padding: 1px;
-  box-shadow:darkblue 100px
-
-  /* Para Organizar Listas */
-  justify-content:flex-start;
-  flex-direction: column;
-  align-items:flex-start;
-}
 
 /* IDENTIFICAR ID {#} */
 /* DENTRO DE LA PRIMERA ETIQUETA PONER ID=NOMBRE DE ID */
