--- a/Css/Niño.css
+++ b/Css/Niño.css
@@ -15,6 +15,19 @@ body {
         display:block;
         margin:auto;
         }
+
+.dalee{
+  cursor: pointer;
+  display: none;
+}
+.accesorios{
+  cursor: pointer;
+  display: none;
+}
+.shoes{
+  cursor: pointer;
+  display: none;
+}    
 .textiles{
     color:rgb(134, 146, 185);
     font-family: "Inter";
